--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
             $("#alertButton").click(function () {
                 // Show an alert message
                 alert("Button clicked!");
+                
             });
+            
+            //funciton in jquery
+            $greeting="hello good evening";
+            $number=10;
+            function hello() {
+                console.log($greeting)
+                alert($number);
+            }
+            hello();
         });
     </script>
 </body>
